# H-Bit---Universal-Protocol-for-Steganography-in-Media-and-Content-Signing

./: .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  PAPER.md  README.md  README_EN.md  WHITEPAPER.md  WHITEPAPER_ES.md  check_gpu.py  debug_dct.py  debug_gpu_path.py  debug_pipeline.py  demo_hbfs.py  hbit_gui.py  project_log.md  pyproject.toml  run_hbit_gpu.bat  setup_gpu_env.ps1  test_formats_output.txt  test_unit_output.txt
.github/workflows/: ci.yml
.hypothesis/constants/: 004e722d2b39195a  006b559781a41f7f  009f7a1122aa4f57  00af9c4b119a3a6e  00c648c5097fa223  00d1f61c84a1ee1b  018739f7205fed82  0189af9862b72772  01bab8b6846a7aee  0202e571b44ff581  02361c7d2d1bf455  024e2d5e388d3ce4  025c876b6e0ab5a5  031f85f1c11bb00b  033cea2e5cae6cf7  03a0bc33c3be41ac  03b0d3ea0ec5c40c  03d65cf548ce3b23  03ed2b59f1db2823  03f93ae630d9f06a  041b39b2cd470cfc  041b82baf95116f0  0422c269544453d1  04364937c878a9e4  049a209bda29ff29  04cf3cdb04981443  04d0c05f3d4010d9  053e484392f2fb53  0541e0883077120f  054ab320cbafed46  0560bb3c63cad2b4  056c0b323bb9ec9a  057d952b615b3324  0585812c3119f6c1  05d3e8b986d0bcd7  05ddb965a4342101  05f8f16e63cda530  060d2b9b5a7f3781  0628f2618034526e  067b7cfeea41ca31  (+1373 more)
.hypothesis/examples/04e6b3400353b141/: 219b56576a6e9a3d
.hypothesis/examples/219b56576a6e9a3d/: b223711c31ae140e
Docs/: Codigo.txt  Especificación Técnica y Estratégica del Protocolo H-Bit.md  Plan de Desarrollo_ Ecosistema H-Bit y Seguridad Física.md
Docs/hardware_integration/: architecture.md
HBFS_Virtual/Signed/: test_file.txt
Roadmap/: INDEX.md  PLAN.md
Roadmap/logs/: 2026-04-24.md
Roadmap/modules/ecosystem/: PLAN.md
apps/api/: main.py  routes.py  schemas.py
apps/hbfs/: identity_registry.py  identity_tool.py  monitor.py  test_hbfs.py
benchmark_data/: benchmark_report.json  benchmark_report.md
contracts/: HBitRegistry.sol
identity/my_key/: hbit_private.pem  hbit_public.pem
scripts/: build_pdf.py  demo_deepfake.py  deploy_blockchain.py  generate_paper.py  github_init.py
src/hbit/: __init__.py  cli.py  pipeline.py  universal.py
tests/: benchmark_suite.py  benchmark_sync.py  verify_fix.py
tests/integration/: test_api.py  test_e2e.py
tests/unit/: test_accelerator.py  test_compression.py  test_compression_robustness.py  test_core.py  test_encryption.py  test_formats.py  test_fuzz.py  test_origin_type.py  test_phase2.py  test_phase3_4.py  test_spectrum.py  test_universal.py  test_universal_encryption.py
(+49 files in other folders)
